# alt-f-next

./: .config  .config-base  .config-dns321  .config-min  .config-pkgs  .config-toolchain  .config.cmd  Config.in  Config.in.legacy  DEVELOPERS  LICENSE  Makefile  NEWS  README.BUILD  README.FIRST  README.INSTALL  README.USE  TODO2  configfs  exports  exports.sh  mkaufspatch.sh  mkcpiogz.sh  mkcpiolzma.sh  mkfw.sh  mkinitramfs.sh  mkpkg.sh  mkprepare.sh  mkreloaded.sh  mksq.sh  mktools.sh  pkgs-check.sh  pkgs-update.sh  qemu-Alt-F.sh  rootfsfiles-base.lst
CA-bundles/: BLFS-ca-bundle-20090409.tar.bz2  README-BLFS-ca-bundle-20090409  README-cacert.pem  ca-bundle.crt  mk-ca-bundle.pl
configs/: alt-f_base_defconfig  alt-f_dns323_defconfig  alt-f_dns325_defconfig  alt-f_dns327_defconfig  alt-f_qemu_defconfig
customroot/: LICENCE  LICENSE  init
fixes/: Alt-F_B5_to_B6.fix  Alt-F_B7_to_RC1.fix
host-tools/: squashfs4.0-lzma-snapshot.tgz
host-tools/devio-1.2/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac
host-tools/devio-1.2/src/: Makefile  Makefile.am  Makefile.in  devio  devio.c
host-tools/devio-1.2/src/.deps/: devio.Po
ipkgfiles/: Alt-F-utils.control  a2ps.control  a2ps.lst  acl.control  acl.lst  alsa-lib.control  alsa-lib.lst  alsa-lib.postinst  alsa-utils.control  alt-f-utils.control  alt-f-utils.lst  amule.control  amule.postrm  apr-util.control  apr.control  apr.lst  aria2.conffiles  aria2.control  aria2.lst  aria2.postrm  aria2web.control  aria2web.postrm  aria2web.preinst  (+592 more)
(+2404 files in other folders)
